added order module
added add/sub/delete in menu and cart dashboard

--- a/TipsyBean/pages/menu.html
+++ b/TipsyBean/pages/menu.html
@@ -109,64 +109,104 @@
         <!-- Hot Beverages -->
         <h3 class="menu-subsection-title">Hot Beverages</h3>
         <div class="menu-items-grid">
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="hot-americano" data-item-name="Hot Americano" data-item-price="90">
             <img src="../assets/hot-americano.jpg" alt="Hot Americano - espresso with hot water" class="menu-item-image" />
             <h4 class="menu-item-name">Hot Americano</h4>
             <p class="menu-item-price">₱90</p>
             <p class="menu-item-description">Rich and bold espresso topped with hot water for a smooth, authentic coffee experience.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="hot-latte" data-item-name="Hot Latte" data-item-price="130">
             <img src="../assets/hot-latte.jpg" alt="Hot Latte - espresso with steamed milk" class="menu-item-image" />
             <h4 class="menu-item-name">Hot Latte</h4>
             <p class="menu-item-price">₱130</p>
             <p class="menu-item-description">Creamy and smooth espresso combined with silky steamed milk and a touch of foam.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="hot-caramel-mach" data-item-name="Hot Caramel Macchiato" data-item-price="160">
             <img src="../assets/hot-caramel-mach.jpg" alt="Hot Caramel Macchiato - espresso with caramel" class="menu-item-image" />
             <h4 class="menu-item-name">Hot Caramel Macchiato</h4>
             <p class="menu-item-price">₱160</p>
             <p class="menu-item-description">Espresso marked with steamed milk and topped with rich caramel sauce for a sweet indulgence.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
         </div>
 
         <!-- Iced Beverages -->
         <h3 class="menu-subsection-title">Iced Beverages</h3>
         <div class="menu-items-grid">
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="iced-americano" data-item-name="Iced Americano" data-item-price="100">
             <img src="../assets/iced-americano.jpg" alt="Iced Americano - cold espresso refresher" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Americano</h4>
             <p class="menu-item-price">₱100</p>
             <p class="menu-item-description">Crisp and refreshing espresso poured over ice and water for the perfect cold coffee.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="iced-latte" data-item-name="Iced Latte" data-item-price="140">
             <img src="../assets/iced-latte.jpg" alt="Iced Latte - cold coffee with milk" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Latte</h4>
             <p class="menu-item-price">₱140</p>
             <p class="menu-item-description">Cool and creamy espresso with cold milk and ice, perfect for warm days.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="iced-caramel-mach" data-item-name="Iced Caramel Macchiato" data-item-price="170">
             <img src="../assets/iced-caramel-mach.jpg" alt="Iced Caramel Macchiato - cold coffee with caramel" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Caramel Macchiato</h4>
             <p class="menu-item-price">₱170</p>
             <p class="menu-item-description">Chilled espresso with creamy milk and delicious caramel for a sweet refreshment.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="iced-matcha-latte" data-item-name="Iced Matcha Latte" data-item-price="190">
             <img src="../assets/iced-matcha-latte.jpg" alt="Iced Matcha Latte - cold matcha green tea drink" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Matcha Latte</h4>
             <p class="menu-item-price">₱190</p>
             <p class="menu-item-description">Smooth and earthy matcha green tea blended with cold milk and ice for a healthier option.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="iced-spanish-latte" data-item-name="Iced Spanish Latte" data-item-price="150">
             <img src="../assets/iced-spanish-latte.jpg" alt="Iced Spanish Latte - cold coffee with sweetened milk" class="menu-item-image" />
             <h4 class="menu-item-name">Iced Spanish Latte</h4>
             <p class="menu-item-price">₱150</p>
             <p class="menu-item-description">Refreshing iced espresso with sweetened condensed milk and cold cream for a rich treat.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -178,50 +218,80 @@
         <!-- Pasta Dishes -->
         <h3 class="menu-subsection-title">Pasta Dishes</h3>
         <div class="menu-items-grid">
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="alfredo-spag" data-item-name="Alfredo Spaghetti" data-item-price="300">
             <img src="../assets/alfredo-spag.jpg" alt="Alfredo Spaghetti - creamy pasta with alfredo sauce" class="menu-item-image" />
             <h4 class="menu-item-name">Alfredo Spaghetti</h4>
             <p class="menu-item-price">₱300</p>
             <p class="menu-item-description">Tender spaghetti coated in a rich and creamy Alfredo sauce, topped with Parmesan cheese.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="bolognese-spag" data-item-name="Bolognese Spaghetti" data-item-price="310">
             <img src="../assets/bolognese-spag.jpg" alt="Bolognese Spaghetti - pasta with meat sauce" class="menu-item-image" />
             <h4 class="menu-item-name">Bolognese Spaghetti</h4>
             <p class="menu-item-price">₱310</p>
             <p class="menu-item-description">Classic spaghetti with a hearty and flavorful Bolognese meat sauce made from quality ingredients.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="basil-spag" data-item-name="Basil Spaghetti" data-item-price="290">
             <img src="../assets/basil-spag.jpg" alt="Basil Spaghetti - fresh pasta with basil" class="menu-item-image" />
             <h4 class="menu-item-name">Basil Spaghetti</h4>
             <p class="menu-item-price">₱290</p>
             <p class="menu-item-description">Fresh and aromatic spaghetti tossed with fragrant basil, olive oil, and a touch of garlic.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
         </div>
 
         <!-- Baked Goods & Pastries -->
         <h3 class="menu-subsection-title">Pastries & Baked Goods</h3>
         <div class="menu-items-grid">
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="croissant" data-item-name="Croissant" data-item-price="95">
             <img src="../assets/croissant.jpg" alt="Croissant - buttery French pastry" class="menu-item-image" />
             <h4 class="menu-item-name">Croissant</h4>
             <p class="menu-item-price">₱95</p>
             <p class="menu-item-description">Flaky and buttery French croissant, perfect with your favorite coffee for a classic breakfast treat.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="blueberry-cheesecake" data-item-name="Blueberry Cheesecake" data-item-price="200">
             <img src="../assets/blueberry-cheesecake.jpg" alt="Blueberry Cheesecake - creamy cheesecake with blueberries" class="menu-item-image" />
             <h4 class="menu-item-name">Blueberry Cheesecake</h4>
             <p class="menu-item-price">₱200</p>
             <p class="menu-item-description">Rich and creamy cheesecake topped with fresh tart blueberries for a delightful indulgence.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
 
-          <div class="menu-item">
+          <div class="menu-item" data-item-id="spandauer" data-item-name="Spandauer" data-item-price="135">
             <img src="../assets/spandauer.jpg" alt="Spandauer - Danish pastry with filling" class="menu-item-image" />
             <h4 class="menu-item-name">Spandauer</h4>
             <p class="menu-item-price">₱135</p>
             <p class="menu-item-description">Traditional Danish pastry with a sweet filling, crispy on the outside and soft inside.</p>
+            <div class="menu-item-cart-controls">
+              <button class="add-to-cart-btn">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -291,66 +361,39 @@
   <!-- Cart Manager -->
   <script src="../script/cart.js"></script>
 
-  <!-- Menu Page Session Management -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // Check if user is logged in and update navbar accordingly
-      const isLoggedIn = sessionManager.isLoggedIn();
-      const authLinks = document.getElementById('authLinks');
-      const signupLink = document.getElementById('signupLink');
-      const profileLink = document.getElementById('profileLink');
-      const logoutLink = document.getElementById('logoutLink');
-      const confirmLogoutBtn = document.getElementById('confirmLogoutBtn');
+  <!-- Menu Cart Integration -->
+  <script src="../script/menu-cart.js"></script>
 
-      if (isLoggedIn) {
-        // Hide login/signup, show profile/logout
-        authLinks.style.display = 'none';
-        signupLink.style.display = 'none';
-        profileLink.style.display = 'block';
-        logoutLink.style.display = 'block';
-
-        // Handle logout confirmation
-        if (confirmLogoutBtn) {
-          confirmLogoutBtn.addEventListener('click', () => {
-            sessionManager.logout();
-            // Close modal
-            const modal = bootstrap.Modal.getInstance(document.getElementById('logoutConfirmModal'));
-            if (modal) {
-              modal.hide();
-            }
-            // Refresh page to show Login/Sign Up buttons
-            setTimeout(() => {
-              window.location.reload();
-            }, 500);
-          });
-        }
-      } else {
-        // Show login/signup, hide profile/logout
-        authLinks.style.display = 'block';
-        signupLink.style.display = 'block';
-        profileLink.style.display = 'none';
-        logoutLink.style.display = 'none';
-      }
-
-      // Scroll to anchor if present in URL
-      const hash = window.location.hash;
-      if (hash) {
-        setTimeout(() => {
-          const element = document.querySelector(hash);
-          if (element) {
-            element.scrollIntoView({ behavior: 'smooth', block: 'start' });
-          }
-        }, 100);
-      }
-    });
-  </script>
+  <!-- Menu Page Script -->
+  <script src="../script/menu.js"></script>
 
   <!-- Floating Cart Button -->
   <div class="floating-cart-container">
-    <a href="./cart.html" class="floating-cart-btn" id="floatingCartBtn" title="View Shopping Cart">
+    <button class="floating-cart-btn" id="floatingCartBtn" title="View Shopping Cart">
       <img src="../assets/cart-icon.png" alt="Shopping Cart" class="floating-cart-icon" />
       <span class="floating-cart-badge" id="floatingCartBadge" style="display: none;"></span>
-    </a>
+    </button>
   </div>
+
+  <!-- Cart Sidebar -->
+  <div class="cart-sidebar" id="cartSidebar">
+    <div class="cart-header">
+      <h2>My Cart</h2>
+      <button class="cart-close-btn" id="cartCloseBtn">&times;</button>
+    </div>
+    <div class="cart-items-container" id="cartItemsContainer">
+      <div class="cart-empty">Your cart is empty</div>
+    </div>
+    <div class="cart-footer">
+      <div class="cart-total">
+        <span class="cart-total-label">Total:</span>
+        <span class="cart-total-amount" id="cartTotalAmount">₱0</span>
+      </div>
+      <button class="cart-checkout-btn" id="cartCheckoutBtn">Proceed to Checkout</button>
+    </div>
+  </div>
+
+  <!-- Cart Overlay -->
+  <div class="cart-overlay" id="cartOverlay"></div>
 </body>
 </html>
