--- a/TipsyBean/pages/profile.html
+++ b/TipsyBean/pages/profile.html
@@ -131,6 +131,66 @@
             </div>
           </div>
 
+          <div class="form-row-full">
+            <div class="form-group">
+              <label for="street" class="form-label">Street Address</label>
+              <input
+                type="text"
+                class="form-control"
+                id="street"
+                name="street"
+                placeholder="Enter your street address"
+              />
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group">
+              <label for="city" class="form-label">City</label>
+              <input
+                type="text"
+                class="form-control"
+                id="city"
+                name="city"
+                placeholder="Enter your city"
+              />
+            </div>
+            <div class="form-group">
+              <label for="province" class="form-label">Province</label>
+              <input
+                type="text"
+                class="form-control"
+                id="province"
+                name="province"
+                placeholder="Enter your province"
+              />
+            </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group">
+              <label for="postalCode" class="form-label">Postal Code</label>
+              <input
+                type="text"
+                class="form-control"
+                id="postalCode"
+                name="postalCode"
+                placeholder="Enter your postal code"
+              />
+            </div>
+            <div class="form-group">
+              <label for="country" class="form-label">Country</label>
+              <input
+                type="text"
+                class="form-control"
+                id="country"
+                name="country"
+                placeholder="Enter your country"
+                value="Philippines"
+              />
+            </div>
+          </div>
+
           <button type="submit" class="save-btn">Save Changes</button>
         </form>
       </section>
