signup page added
simple signup page with email verification found in the console

--- a/TipsyBean/pages/menu.html
+++ b/TipsyBean/pages/menu.html
@@ -82,7 +82,7 @@
               <a class="nav-link text-white px-3" href="./login.html" role="menuitem">Login</a>
             </li>
             <li class="nav-item" role="none" id="signupLink">
-              <a class="nav-link nav-signup-btn px-3" href="./login.html" role="menuitem">Sign Up</a>
+              <a class="nav-link nav-signup-btn px-3" href="./signup.html" role="menuitem">Sign Up</a>
             </li>
             <!-- Profile & Logout - Hidden by default -->
             <li class="nav-item" role="none" id="profileLink" style="display: none;">
