--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <a class="nav-link text-white px-3" href="./TipsyBean/pages/login.html" role="menuitem">Login</a>
             </li>
             <li class="nav-item" role="none" id="signupLink">
-              <a class="nav-link nav-signup-btn px-3" href="./TipsyBean/pages/login.html" role="menuitem">Sign Up</a>
+              <a class="nav-link nav-signup-btn px-3" href="./TipsyBean/pages/signup.html" role="menuitem">Sign Up</a>
             </li>
             <!-- Profile & Logout - Hidden by default -->
             <li class="nav-item" role="none" id="profileLink" style="display: none;">
