added order tracking in profile
added order tracking in profile page

--- a/TipsyBean/pages/profile.html
+++ b/TipsyBean/pages/profile.html
@@ -195,6 +195,15 @@
         </form>
       </section>
 
+      <!-- Order History Section -->
+      <section class="profile-section">
+        <h2 class="section-header">Order History</h2>
+
+        <div id="ordersContainer">
+          <p class="text-muted">Loading orders...</p>
+        </div>
+      </section>
+
       <!-- Email Section -->
       <section class="profile-section">
         <h2 class="section-header">Email</h2>
