bug fixed/ added order feature
bug fixed for the order redundancy, added a limit for the order history features, added a view all button for the order history. created a dedicated page for the order history

--- a/TipsyBean/pages/profile.html
+++ b/TipsyBean/pages/profile.html
@@ -202,6 +202,10 @@
         <div id="ordersContainer">
           <p class="text-muted">Loading orders...</p>
         </div>
+        
+        <a href="./order-history.html" class="btn-view-all-orders" id="viewAllOrdersBtn" style="display: none;">
+          <i class="fas fa-list"></i> View All Orders
+        </a>
       </section>
 
       <!-- Email Section -->
