added admin dashboard
dashboard for admin access

--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
           <div class="footer-text text-white fs-6">
             &copy; 2025 Tipsy Bean. All rights reserved.
+            <span class="mx-2">|</span>
+            <a href="./TipsyBean/pages/admin-login.html" class="text-white-50 text-decoration-none" style="font-size: 0.85rem;">Admin</a>
           </div>
         </div>
         <div class="col-md-6 text-center text-md-end">
